c/examples/writing-a-c-compiler-tests/tests/chapter_6/valid/ternary_middle_assignment.c
int main(void) {
    int a = 1;
    a != 2 ? a = 2 : 0;
    return a;
}