c/examples/writing-a-c-compiler-tests/tests/chapter_6/invalid_lex/extra_credit/bad_label.c
int main(void) {
    0invalid_label:
        return 0;
}